olap.result, olap.test:   Added a test case for bug #8616. item.h:   Fixed bug #8616.   Added class Item_null_result used in rollup processing. sql_select.h, sql_select.cc:   Fixed bug #8616.   Added JOIN::rollup_write_data to cover rollup queries   with DISTINCT. Modified other rollup methods.

sql/sql_select.cc:
  Fixed bug #8616.
  Added JOIN::rollup_write_data to cover rollup queries
  with DISTINCT. Modified other rollup methods.
sql/sql_select.h:
  Fixed bug #8616.
  Added JOIN::rollup_write_data to cover rollup queries
  with DISTINCT. Modified other rollup methods.
sql/item.h:
  Fixed bug #8616.
  Added class Item_null_result used in rollup processing.
mysql-test/t/olap.test:
  Added a test case for bug #8616.
mysql-test/r/olap.result:
  Added a test case for bug #8616.